# Forgotten-Realms

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: docker-image.yml
.vs-code/: game.code-workspace
api_sdk/: Cargo.toml
api_sdk/src/: configuration.rs  lib.rs  requests.rs  responses.rs  sdk.rs
auth_server/: Cargo.toml
auth_server/src/: api.rs  main.rs  server.rs
backend/: go.mod  go.sum
backend/scripts/: build.sh
csharp/: SimplifiedCrafter.sln
database/: Dockerfile
db_migration_lib/: Cargo.toml
design/: rules.md
documentation/: database.md  environment.md  infrastructure.md  scripts.md  workflows.md
fr_cli/: Cargo.toml
fr_cli/src/: args.rs  (+1 more)
frontend/: package-lock.json
golang/: go.mod
infrastructure/: docker-compose.yaml
legacy/: README.md
realm_server/: Cargo.toml
realm_server/migrations/realm/: 000-shemas-perms.sql  002-settings.sql  003-players.sql  004-villages.sql
realm_server/migrations/world/: 000-shemas-perms.sql  001-extensions.sql
realm_server/src/: server.rs
realm_server/src/api/controller/: player.rs
realm_server/src/api/service/: faction.rs
realm_server/src/event_hub/: event.rs
realm_server/src/event_hub/event/: village.rs
realm_server/src/server/: configuration.rs  database.rs
realm_server/src/simulation/: tick.rs
realm_server/src/simulation/ecs/: entities.rs
realm_server/src/simulation/event_handlers/: player.rs
scripts/: clean.sh  clean_run.sh  gen_docs.sh  run.sh  stop.sh
web_client/: Cargo.toml  package.json
world_server/: Cargo.toml
(+450 files in other folders)
