[package]
name = "realm_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.19.0", features = ["v4"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
db_migration_lib = { path = "../db_migration_lib" }
api_sdk = { path = "../api_sdk" }